--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,3 @@
-# Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
@@ -12,3 +11,5 @@ archives_base_name=sqlib
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 fabric_version=0.39.2+1.17
+# check this on https://github.com/xerial/sqlite-jdbc/releases
+sqlite_version=3.36.0.3
