--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ dependencies {
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
+    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
     // JDBC SQLITE
     implementation group: 'org.xerial', name: 'sqlite-jdbc', version: project.sqlite_version
