--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ dependencies {
 
     // JDBC SQLITE
     compileOnly group: 'org.xerial', name: 'sqlite-jdbc', version: project.sqlite_version
-    //include group: 'org.xerial', name: 'sqlite-jdbc', version: project.sqlite_version
+    include group: 'org.xerial', name: 'sqlite-jdbc', version: project.sqlite_version
 }
 
 processResources {
