--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,7 @@ dependencies {
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
     // JDBC SQLITE
-    compileOnly group: 'org.xerial', name: 'sqlite-jdbc', version: project.sqlite_version
-    include group: 'org.xerial', name: 'sqlite-jdbc', version: project.sqlite_version
+    include(implementation(group: 'org.xerial', name: 'sqlite-jdbc', version: project.sqlite_version))
 }
 
 processResources {
