--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,9 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-    // JDBC SQLITE
+    // JDBC SQL
     modImplementation group: 'org.xerial', name: 'sqlite-jdbc', version: project.sqlite_version
+    modImplementation group: 'mysql', name: 'mysql-connector-java', version: project.mysql_version
 }
 
 processResources {
