--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,16 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
-# check these on https://modmuss50.me/fabric.html
-minecraft_version=1.19
-yarn_mappings=1.19+build.2
-loader_version=0.14.7
+# check these on https://fabricmc.net/develop/
+minecraft_version=1.19.1
+yarn_mappings=1.19.1+build.1
+loader_version=0.14.8
 # Mod Properties
-mod_version=1.3.0
+mod_version=1.3.1
 maven_group=mrnavastar
 archives_base_name=sqlib
 # Dependencies
-# check this on https://modmuss50.me/fabric.html
+# check this on https://fabricmc.net/develop/
 # check this on https://github.com/xerial/sqlite-jdbc/releases
 sqlite_version=3.36.0.3
 # check this on https://mvnrepository.com/artifact/mysql/mysql-connector-java
-mysql_version=8.0.29
+mysql_version=8.0.30
