--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,16 +1,33 @@
+name: Release New Version
 on:
   push:
     tags:
       - '*'
 
 jobs:
-  modrinth:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
+        with:
+          distribution: temurin
+          java-version: 17
+
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+
+      - name: Execute Gradle build
+        run: ./gradlew build
+
+  publish:
     runs-on: ubuntu-latest
     steps:
       - uses: Kir-Antipov/mc-publish@v3.2
         with:
           name: ""
           modrinth-token: ${{ secrets.MODRINTH_TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
           files: build/libs/*.jar
 
