--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,6 +21,7 @@ jobs:
         run: ./gradlew build
 
   publish:
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: Kir-Antipov/mc-publish@v3.2
