--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,7 +21,7 @@ jobs:
         run: ./gradlew build
 
       - name: Upload Jar
-      - uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v3
         with:
           name: sqlib-jar
           path: ${{ github.workspace }}/build/libs/*.jar
@@ -33,7 +33,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Download Jar
-      - uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v3
         with:
           name: sqlib-jar
           path: ${{ github.workspace }}
@@ -43,7 +43,8 @@ jobs:
         with:
           name: sqlib-jar
 
-      - uses: Kir-Antipov/mc-publish@v3.2
+      - name: Publish Release
+        uses: Kir-Antipov/mc-publish@v3.2
         with:
           name: ""
           modrinth-token: ${{ secrets.MODRINTH_TOKEN }}
