--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -45,12 +45,22 @@ jobs:
       - name: Publish Release
         uses: Kir-Antipov/mc-publish@v3.2
         with:
-          name: SQLib {{ version }}
           modrinth-token: ${{ secrets.MODRINTH_TOKEN }}
 
           files: ${{ github.workspace }}/*.jar
 
-          version-resolver: releases
+          game-versions: |
+            1.16.5
+            1.17
+            1.17.1
+            1.18
+            1.18.1
+            1.18.2
+            1.19
+            1.19.1
+            1.19.2
+            1.19.3
+            1.19.4
           loaders: |
             fabric
             quilt
