close all databases on server shutdown

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,6 +8,7 @@ maven_group=mrnavastar
 archives_base_name=sqlib
 
 # Dependencies
+fabric_version=0.90.0+1.20.2
 # check this on https://github.com/xerial/sqlite-jdbc/releases
 sqlite_version=3.43.0.0
 # check this on https://mvnrepository.com/artifact/mysql/mysql-connector-java
