--- a/gradle.properties
+++ b/gradle.properties
@@ -3,13 +3,15 @@ org.gradle.jvmargs=-Xmx4G
 minecraft_version=1.20.2
 yarn_mappings=1.20.2+build.1
 loader_version=0.14.22
+fabric_version=0.90.0+1.20.2
 # Mod Properties
 maven_group=mrnavastar
 archives_base_name=sqlib
 
 # Dependencies
-fabric_version=0.90.0+1.20.2
-# check this on https://github.com/xerial/sqlite-jdbc/releases
+# https://github.com/xerial/sqlite-jdbc/releases
 sqlite_version=3.43.0.0
-# check this on https://mvnrepository.com/artifact/mysql/mysql-connector-java
+# https://mvnrepository.com/artifact/mysql/mysql-connector-java
 mysql_version=8.0.33
+# https://github.com/FasterXML/jackson-dataformats-text
+jackson_version=2.15.3
