--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,11 +27,15 @@ jobs:
         run: ./gradlew build
         
       - name: Rename File
-        run: mv ${{ github.workspace }}/build/libs/sqlib-all.jar ${{ github.workspace }}/sqlib-${{ github.ref_name }}.jar
-        
+        run: mv ${{ github.workspace }}/build/libs/sqlib-all.jar ${{ github.workspace }}/sqlib-${{ github.ref_name }}.jar; mv ${{ github.workspace }}/build/libs/sqlib-javadoc.jar ${{ github.workspace }}/sqlib-javadoc-${{ github.ref_name }}.jar
+
       - name: Publish Release
         uses: Kir-Antipov/mc-publish@v3.3
         with:
           modrinth-token: ${{ secrets.MODRINTH_TOKEN }}
-          files: ${{ github.workspace }}/sqlib-${{ github.ref_name }}.jar
+          files: |
+            ${{ github.workspace }}/sqlib-${{ github.ref_name }}.jar
+            ${{ github.workspace }}/sqlib-javadoc${{ github.ref_name }}.jar
           java: 17
+          game-versions: |
+            >=1.16.5
