--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,7 +27,10 @@ jobs:
         run: ./gradlew build
         
       - name: Rename File
-        run: mv ${{ github.workspace }}/build/libs/sqlib-all.jar ${{ github.workspace }}/sqlib-${{ github.ref_name }}.jar; mv ${{ github.workspace }}/build/libs/sqlib-javadoc.jar ${{ github.workspace }}/sqlib-javadoc-${{ github.ref_name }}.jar
+        run: |
+          mv ${{ github.workspace }}/build/libs/sqlib-all.jar ${{ github.workspace }}/sqlib-${{ github.ref_name }}.jar; 
+          mv ${{ github.workspace }}/build/libs/sqlib-javadoc.jar ${{ github.workspace }}/sqlib-javadoc-${{ github.ref_name }}.jar;
+          mv ${{ github.workspace }}/build/libs/sqlib-sources.jar ${{ github.workspace }}/sqlib-sources-${{ github.ref_name }}.jar;
 
       - name: Publish Release
         uses: Kir-Antipov/mc-publish@v3.3
@@ -36,6 +39,7 @@ jobs:
           files: |
             ${{ github.workspace }}/sqlib-${{ github.ref_name }}.jar
             ${{ github.workspace }}/sqlib-javadoc${{ github.ref_name }}.jar
+            ${{ github.workspace }}/sqlib-sources{{ github.ref_name }}.jar
           java: 17
           game-versions: |
             >=1.16.5
