delombok sources jar

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'fabric-loom' version '1.4.4'
     id 'com.github.johnrengelman.shadow' version '8.1.1'
+    id 'io.freefair.lombok' version '8.4'
 }
 
 def targetJavaVersion = 17
@@ -61,6 +62,13 @@ java {
     javadoc.options.addStringOption('Xdoclint:none', '-quiet')
     withJavadocJar()
     withSourcesJar()
+}
+
+sourcesJar {
+    exclude {
+        sourceSets.main.allSource.contains it.file
+    }
+    from delombok
 }
 
 jar {
