--- a/build.gradle
+++ b/build.gradle
@@ -18,10 +18,10 @@ dependencies {
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
     // SQL Drivers
-    implementation "org.xerial:sqlite-jdbc:${project.sqlite_version}"
-    implementation "mysql:mysql-connector-java:${project.mysql_version}"
+    shadow implementation("org.xerial:sqlite-jdbc:${project.sqlite_version}")
+    shadow implementation("mysql:mysql-connector-java:${project.mysql_version}")
     //Config
-    implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-toml:${project.jackson_version}"
+    shadow implementation("com.fasterxml.jackson.dataformat:jackson-dataformat-toml:${project.jackson_version}")
 
     // Extra
     compileOnly "org.projectlombok:lombok:1.18.28"
@@ -29,7 +29,7 @@ dependencies {
     modImplementation "maven.modrinth:easy-eula:1.0.0"
 }
 
-shadowJar {
+/*shadowJar {
     archiveBaseName.set('sqlib')
 
     dependencies {
@@ -37,6 +37,17 @@ shadowJar {
         include(dependency("mysql:mysql-connector-java:.*"))
         include(dependency("com.fasterxml.jackson.dataformat:jackson-dataformat-toml:.*"))
     }
+}*/
+
+shadowJar {
+    archiveBaseName.set('sqlib')
+    configurations = [project.configurations.shadow]
+
+    minimize {
+        exclude(dependency("org.xerial:sqlite-jdbc:.*"))
+        exclude(dependency("mysql:mysql-connector-java:.*"))
+    }
+    minimize()
 }
 
 jar.finalizedBy('shadowJar')
