--- a/gradle.properties
+++ b/gradle.properties
@@ -13,5 +13,7 @@ archives_base_name=sqlib
 sqlite_version=3.44.0.0
 # https://mvnrepository.com/artifact/mysql/mysql-connector-java
 mysql_version=8.0.33
+# https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client
+mariadb_version=3.3.0
 # https://github.com/FasterXML/jackson-dataformats-text
 jackson_version=2.15.3
