--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@ archives_base_name=sqlib
 sqlite_version=3.44.0.0
 # https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client
 mariadb_version=3.3.0
-# https://mvnrepository.com/artifact/org.apache.commons/commons-dbcp2
-dbcp2_version=2.11.0
+# https://central.sonatype.com/artifact/com.zaxxer/HikariCP
+hikari_version=5.1.0
 # https://github.com/FasterXML/jackson-dataformats-text
 jackson_version=2.15.3
