--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,7 +25,14 @@ jobs:
 
       - name: Execute Gradle build
         run: ./gradlew build
-        
+
+      - name: Publish Test Report
+        uses: mikepenz/action-junit-report@v4
+        if: success()
+        with:
+          fail_on_failure: true
+          report_paths: '**/build/test-results/test/TEST-*.xml'
+
       - name: Rename File
         run: |
           mv ${{ github.workspace }}/build/libs/sqlib.jar ${{ github.workspace }}/sqlib-${{ github.event.release.tag_name }}.jar; 
@@ -42,6 +49,19 @@ jobs:
             ${{ github.workspace }}/sqlib-${{ github.event.release.tag_name }}-sources.jar
           java: 17
           game-versions: |
-            >=1.16.5
+            1.20.2
+            1.20.1
+            1.20
+            1.19.4
+            1.19.3
+            1.19.2
+            1.19.1
+            1.19
+            1.18.2
+            1.18.1
+            1.18
+            1.17.1
+            1.17
+            1.16.5
           dependencies: |
             fabric-api
