--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,17 @@
 org.gradle.jvmargs=-Xmx4G
+
+# Fabric
 # check these on https://fabricmc.net/develop/
 minecraft_version=1.20.4
 yarn_mappings=1.20.4+build.3
 loader_version=0.15.5
 fabric_version=0.94.0+1.20.4
+
+# Paper
+# check this on https://repo.papermc.io/#browse/browse:maven-public:io%2Fpapermc%2Fpaper%2Fpaper-api
+paper_version=1.20.4-R0.1-SNAPSHOT
+adventure_version=5.11.0-SNAPSHOT
+
 # Mod Properties
 maven_group=mrnavastar
 archives_base_name=sqlib
