add forge support!

--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ group = project.maven_group
 
 repositories {
     maven { url "https://api.modrinth.com/maven" }
+    maven { url "https://maven.minecraftforge.net" }
     maven { url "https://repo.papermc.io/repository/maven-public/" }
     maven {
         name = "sonatype-oss-snapshots1"
@@ -26,6 +27,9 @@ dependencies {
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+
+    // Forge
+    implementation "net.minecraftforge:javafmllanguage:${project.forge_version}"
 
     // Paper
     compileOnly "io.papermc.paper:paper-api:${project.paper_version}"
@@ -50,6 +54,8 @@ shadowJar {
 
     dependencies {
         mergeServiceFiles()
+        exclude(dependency('org.slf4j:.*:.*'))
+        exclude(dependency('net.java.dev.jna:.*:.*'))
     }
 }
 
