--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,10 @@ yarn_mappings=1.20.4+build.3
 loader_version=0.15.6
 fabric_version=0.95.0+1.20.4
 
+# Forge Properties
+# check this on https://files.minecraftforge.net/net/minecraftforge/forge/
+forge_version=1.20.4-49.0.11
+
 # Paper
 # check this on https://repo.papermc.io/#browse/browse:maven-public:io%2Fpapermc%2Fpaper%2Fpaper-api
 paper_version=1.20.4-R0.1-SNAPSHOT
